# SIMDMath

./: CMakeLists.txt  README  simdmath.cpp  simdmath.hpp
